accounts: fix matrix input
was too small to see what you were typing.

--- a/css/base.css
+++ b/css/base.css
@@ -207,9 +207,9 @@ sup.\~critical, .text-critical {
     font-size: 1rem;
     padding-top: 0.1rem;
     padding-bottom: 0.1rem;
-    margin-left: 0.5rem;
-    margin-right: 1rem;
-    max-width: 75%;
+    margin-inline-start: 0.5rem;
+    margin-inline-end: 1rem;
+    width: 5rem;;
 }
 
 .stealth-input-hidden {
